...
    });
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: const Key('home_screen'),
      backgroundColor: Colors.black,
      appBar: AppBar(
        key: const Key('home_app_bar'),
        backgroundColor: Colors.black,
        elevation: 0,
        actions: [
...
          BottomNavigationBarItem(
            key: const Key('profile_tab'),
            icon: Icon(Icons.person),
            label: 'Profile',
          ),
          BottomNavigationBarItem(
            key: const Key('feedback_tab'),
            icon: Icon(Icons.feedback),
            label: 'Feedbacks',
          ),
        ],
      ),
    );
...
